src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Capital__c</fullName>
        <label>Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lab_Office__c</fullName>
        <description>SAP Field|Created by NS|11/5/2015</description>
        <label>Lab Office</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Office_text__c</fullName>
        <description>SAP Field|Created by NS|11/5/2015</description>
        <label>Lab Office Text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group__c</fullName>
        <label>Material Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Type__c</fullName>
        <description>SAP Field|Created by NS|11/5/2015</description>
        <label>Material Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Description__c</fullName>
        <label>Model Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>SAP Field|Created by NS|11/5/2015</description>
        <label>Model</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH1_Description__c</fullName>
        <label>PH1 Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH1__c</fullName>
        <description>SAP Field|Created by NS|11/5/2015</description>
        <label>PH1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH2_Description__c</fullName>
        <label>PH2 Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH2__c</fullName>
        <description>SAP Field|Created by NS|11/5/2015</description>
        <label>PH2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH3_Description__c</fullName>
        <label>PH3 Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH3__c</fullName>
        <description>SAP Field|Created by NS|11/5/2015</description>
        <label>PH3</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <description>Unique Id to map SAP field|NS|11/2/2015</description>
        <externalId>true</externalId>
        <label>Product Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>USD_Accounting_Group__c</fullName>
        <label>USD Accounting Group</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Combined_Product_Category__c</fullName>
        <label>USD Combined Product Category</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Executive_Detail__c</fullName>
        <label>USD Executive Detail</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Forecast_Level_2__c</fullName>
        <label>USD Forecast Level 2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Manager_Detail__c</fullName>
        <label>USD Manager Detail</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Category__c</fullName>
        <label>USD Product Category</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Family__c</fullName>
        <label>USD Product Family</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Group_Name__c</fullName>
        <label>USD Product Group Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Sub_Division__c</fullName>
        <label>USD Product Sub - Division</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Type__c</fullName>
        <label>USD Product Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Selling_Division__c</fullName>
        <label>USD Selling Division</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>